html and css files

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <!-- partial:index.partial.html -->
   <header id="header">
     <div class="header-img">
-      <img id="header-img" src="https://github.com/AlHoucine/A-Product-Landing-Page/blob/master/image/logo.jpeg?raw=true" alt="Company logo">
+      <img id="header-img"
+        src="https://github.com/AlHoucine/A-Product-Landing-Page/blob/master/image/logo.jpeg?raw=true"
+        alt="Company logo">
     </div>
     <!-- ----Navigation bar---- -->
     <nav id="nav-bar">
@@ -35,7 +37,8 @@
   <!-- ----Promise section---- -->
   <div id="promise">
     <div class="service">
-      <img class="image" src="https://raw.githubusercontent.com/AlHoucine/A-Product-Landing-Page/master/image/service.jpg" alt="Service">
+      <img class="image"
+        src="https://raw.githubusercontent.com/AlHoucine/A-Product-Landing-Page/master/image/service.jpg" alt="Service">
       <h2>Scheduled Carefree Maintenance.</h2>
       <p class="text">For advanced peace of mind, most model year 2020 and 2021 Volkswagen vehicles come standard with
         Scheduled Carefree Maintenance, which includes the first two years of manufacturer-recommended maintenance
@@ -62,26 +65,27 @@
   <div id="models">
     <div id="car">
       <h2 class="car-model">Golf R</h2>
-      <img class="car-img" src="https://github.com/AlHoucine/A-Product-Landing-Page/blob/master/image/golf.png?raw=true" alt="Golf">
+      <img class="car-img" src="https://github.com/AlHoucine/A-Product-Landing-Page/blob/master/image/golf.png?raw=true"
+        alt="Golf">
       <h3>The performance hatch</h3>
       <p>Starting at $40,395</p>
-      </strong>
       <button class="button" type="text" name="explore">Explore</button>
     </div>
     <div id="car">
       <h2 class="car-model">Golf GTI</h2>
-      <img class="car-img" src="https://github.com/AlHoucine/A-Product-Landing-Page/blob/master/image/golf-Gti.png?raw=true" alt="Golf-gti">
+      <img class="car-img"
+        src="https://github.com/AlHoucine/A-Product-Landing-Page/blob/master/image/golf-Gti.png?raw=true"
+        alt="Golf-gti">
       <h3>The hot hatch</h3>
       <p>Starting at $28,595</p>
-      </strong>
       <button class="button" type="text" name="explore">Explore</button>
     </div>
     <div id="car">
       <h2 class="car-model">Golf</h2>
-      <img class="car-img" src="https://github.com/AlHoucine/A-Product-Landing-Page/blob/master/image/golf-R.png?raw=true" alt="Golf-R">
+      <img class="car-img"
+        src="https://github.com/AlHoucine/A-Product-Landing-Page/blob/master/image/golf-R.png?raw=true" alt="Golf-R">
       <h3>The modern hatch</h3>
       <p>Starting at $23,195</p>
-      </strong>
       <button class="button" type="button" name="explore">Explore</button>
     </div>
   </div>
